--- a/src/main/resources/assets/destriummod/lang/en_us.json
+++ b/src/main/resources/assets/destriummod/lang/en_us.json
@@ -9,6 +9,8 @@
   "item.destriummod.argonide_ingot": "Argonide Ingot",
   "item.destriummod.argonide_nuggets": "Argonide Nuggets",
   
+  "item.destriummod.emerald_nuggets": "Emerald Nuggets",
+  
   
   "item.destriummod.amazonite_stick": "Amazonite Stick",
   "item.destriummod.destrium_stick": "Destrium Stick",
