--- a/src/main/resources/assets/destriummod/lang/fr_fr.json
+++ b/src/main/resources/assets/destriummod/lang/fr_fr.json
@@ -9,6 +9,8 @@
   "item.destriummod.argonide_ingot": "Lingot d'Argonide",
   "item.destriummod.argonide_nuggets": "PÃ©pite d'Argonide",
   
+  "item.destriummod.emerald_nuggets": "Pépite d'Emeraude",
+  
   
   "item.destriummod.amazonite_stick": "Stick En Amazonite",
   "item.destriummod.destrium_stick": "Stick En Destrium",
