--- a/src/main/resources/assets/destriummod/lang/en_us.json
+++ b/src/main/resources/assets/destriummod/lang/en_us.json
@@ -10,6 +10,7 @@
   "item.destriummod.argonide_nuggets": "Argonide Nuggets",
   
   "item.destriummod.emerald_nuggets": "Emerald Nuggets",
+  "item.destriummod.diamond_nuggets": "Diamond Nuggets",
   
   
   "item.destriummod.amazonite_stick": "Amazonite Stick",
