--- a/src/main/resources/assets/destriummod/lang/fr_fr.json
+++ b/src/main/resources/assets/destriummod/lang/fr_fr.json
@@ -10,6 +10,7 @@
   "item.destriummod.argonide_nuggets": "PÃ©pite d'Argonide",
   
   "item.destriummod.emerald_nuggets": "Pépite d'Emeraude",
+  "item.destriummod.diamond_nuggets": "Pépite de Diamants",
   
   
   "item.destriummod.amazonite_stick": "Stick En Amazonite",
