--- a/src/main/resources/assets/destriummod/lang/en_us.json
+++ b/src/main/resources/assets/destriummod/lang/en_us.json
@@ -11,6 +11,7 @@
   
   "item.destriummod.emerald_nuggets": "Emerald Nuggets",
   "item.destriummod.diamond_nuggets": "Diamond Nuggets",
+  "item.destriummod.netherite_nuggets": "Netherite Nuggets",
   
   
   "item.destriummod.amazonite_stick": "Amazonite Stick",
