--- a/src/main/resources/assets/destriummod/lang/fr_fr.json
+++ b/src/main/resources/assets/destriummod/lang/fr_fr.json
@@ -11,6 +11,7 @@
   
   "item.destriummod.emerald_nuggets": "Pépite d'Emeraude",
   "item.destriummod.diamond_nuggets": "Pépite de Diamants",
+  "item.destriummod.netherite_nuggets": "Pépite de Netherite",
   
   
   "item.destriummod.amazonite_stick": "Stick En Amazonite",
