Emerald/Diamond/NetheriteNuggetsDescriptionAdded

--- a/src/main/resources/assets/destriummod/lang/en_us.json
+++ b/src/main/resources/assets/destriummod/lang/en_us.json
@@ -200,6 +200,10 @@
   "item.destriummod.argonide_ingot.desc3": ">> Argonide",
   "item.destriummod.argonide_nuggets.desc": "Used to craft the Argonide Ingot",
   
+  "item.destriummod.emerald_nuggets.desc": "Used to craft the Emerald",
+  "item.destriummod.diamond_nuggets.desc": "Used to craft the Diamond",
+  "item.destriummod.netherite_nuggets.desc": "Used to craft the Netherite Scrap",
+  
   
   "item.destriummod.amazonite_stick.desc": "Used to craft the Amazonite Tools",
   "item.destriummod.destrium_stick.desc": "Used to craft the Destrium Tools",
