--- a/src/main/resources/assets/destriummod/lang/fr_fr.json
+++ b/src/main/resources/assets/destriummod/lang/fr_fr.json
@@ -200,6 +200,10 @@
   "item.destriummod.argonide_ingot.desc3": ">> Argonide",
   "item.destriummod.argonide_nuggets.desc": "UtilisÃ© pour craft le Lingot d'Argonide",
   
+  "item.destriummod.emerald_nuggets.desc": "Utilisé pour craft une Emeraude",
+  "item.destriummod.diamond_nuggets.desc": "Utilisé pour craft un Diamants",
+  "item.destriummod.netherite_nuggets.desc": "Utilisé pour craft le Fragment de Netherite",
+  
   
   "item.destriummod.amazonite_stick.desc": "UtilisÃ© pour craft les Outils En Amazonite",
   "item.destriummod.destrium_stick.desc": "UtilisÃ© pour craft les Outils En Destrium",
