--- a/src/main/resources/assets/destriummod/lang/en_us.json
+++ b/src/main/resources/assets/destriummod/lang/en_us.json
@@ -116,6 +116,8 @@
   "block.destriummod.dirt_compressed4": "Compressed Dirt Four Times",
   "block.destriummod.dirt_compressed5": "Compressed Dirt Five Times",
   
+  "block.destriummod.paradis_portal_block": "Paradis Portal Block",
+  
   
   "block.destriummod.cloud": "Cloud",
   "block.destriummod.black_cloud": "Black Cloud",
