--- a/src/main/resources/assets/destriummod/lang/fr_fr.json
+++ b/src/main/resources/assets/destriummod/lang/fr_fr.json
@@ -116,6 +116,8 @@
   "block.destriummod.dirt_compressed4": "Terre Compressé Quatre Fois",
   "block.destriummod.dirt_compressed5": "Terre Compressé Cinq Fois",
   
+  "block.destriummod.paradis_portal_block": "Portail pour le Paradis",
+  
   
   "block.destriummod.cloud": "Nuage",
   "block.destriummod.black_cloud": "Nuage Noire",
