--- a/src/main/resources/assets/destriummod/lang/en_us.json
+++ b/src/main/resources/assets/destriummod/lang/en_us.json
@@ -117,6 +117,7 @@
   "block.destriummod.dirt_compressed5": "Compressed Dirt Five Times",
   
   "block.destriummod.paradis_portal_block": "Paradis Portal Block",
+  "block.destriummod.overworld_portal_block": "Overworld Portal Block",
   
   
   "block.destriummod.cloud": "Cloud",
