--- a/src/main/resources/assets/destriummod/lang/en_us.json
+++ b/src/main/resources/assets/destriummod/lang/en_us.json
@@ -55,6 +55,8 @@
   "item.destriummod.argonide_leggings": "Argonide Leggings",
   "item.destriummod.argonide_boots": "Argonide Boots",
   
+  "item.destriummod.speed_boots": "Speed Destrium",
+  
   
   "item.destriummod.amazonite_apple": "Amazonite Apple",
   "item.destriummod.destrium_apple": "Destrium Apple",
