--- a/src/main/resources/assets/destriummod/lang/fr_fr.json
+++ b/src/main/resources/assets/destriummod/lang/fr_fr.json
@@ -55,6 +55,8 @@
   "item.destriummod.argonide_leggings": "Jambiere En Argonide",
   "item.destriummod.argonide_boots": "Bottes En Argonide",
   
+  "item.destriummod.speed_boots": "Bottes De Vitesse",
+  
   
   "item.destriummod.amazonite_apple": "Pomme En Amazonite",
   "item.destriummod.destrium_apple": "Pomme En Destrium",
