--- a/src/main/resources/assets/destriummod/lang/en_us.json
+++ b/src/main/resources/assets/destriummod/lang/en_us.json
@@ -56,6 +56,7 @@
   "item.destriummod.argonide_boots": "Argonide Boots",
   
   "item.destriummod.speed_boots": "Speed Destrium",
+  "item.destriummod.feather_boots": "Feather Boots",
   
   
   "item.destriummod.amazonite_apple": "Amazonite Apple",
