--- a/src/main/resources/assets/destriummod/lang/fr_fr.json
+++ b/src/main/resources/assets/destriummod/lang/fr_fr.json
@@ -56,6 +56,7 @@
   "item.destriummod.argonide_boots": "Bottes En Argonide",
   
   "item.destriummod.speed_boots": "Bottes De Vitesse",
+  "item.destriummod.feather_boots": "Bottes D'Anti-Chute",
   
   
   "item.destriummod.amazonite_apple": "Pomme En Amazonite",
