--- a/src/main/resources/assets/destriummod/lang/en_us.json
+++ b/src/main/resources/assets/destriummod/lang/en_us.json
@@ -55,7 +55,7 @@
   "item.destriummod.argonide_leggings": "Argonide Leggings",
   "item.destriummod.argonide_boots": "Argonide Boots",
   
-  "item.destriummod.speed_boots": "Speed Destrium",
+  "item.destriummod.speed_boots": "Speed Boots",
   "item.destriummod.feather_boots": "Feather Boots",
   
   
