--- a/src/main/resources/assets/destriummod/lang/en_us.json
+++ b/src/main/resources/assets/destriummod/lang/en_us.json
@@ -57,6 +57,7 @@
   
   "item.destriummod.speed_boots": "Speed Boots",
   "item.destriummod.feather_boots": "Feather Boots",
+  "item.destriummod.jump_boots": "Jump Boots",
   
   
   "item.destriummod.amazonite_apple": "Amazonite Apple",
