--- a/src/main/resources/assets/destriummod/lang/fr_fr.json
+++ b/src/main/resources/assets/destriummod/lang/fr_fr.json
@@ -57,6 +57,7 @@
   
   "item.destriummod.speed_boots": "Bottes De Vitesse",
   "item.destriummod.feather_boots": "Bottes D'Anti-Chute",
+  "item.destriummod.jump_boots": "Bottes de Saut",
   
   
   "item.destriummod.amazonite_apple": "Pomme En Amazonite",
