--- a/src/main/resources/assets/destriummod/lang/fr_fr.json
+++ b/src/main/resources/assets/destriummod/lang/fr_fr.json
@@ -58,6 +58,7 @@
   "item.destriummod.speed_boots": "Bottes De Vitesse",
   "item.destriummod.feather_boots": "Bottes D'Anti-Chute",
   "item.destriummod.jump_boots": "Bottes de Saut",
+  "item.destriummod.adventurer_boots": "Bottes d'Aventurier",
   
   
   "item.destriummod.amazonite_apple": "Pomme En Amazonite",
