--- a/src/main/resources/assets/destriummod/lang/fr_fr.json
+++ b/src/main/resources/assets/destriummod/lang/fr_fr.json
@@ -59,6 +59,7 @@
   "item.destriummod.feather_boots": "Bottes D'Anti-Chute",
   "item.destriummod.jump_boots": "Bottes de Saut",
   "item.destriummod.adventurer_boots": "Bottes d'Aventurier",
+  "item.destriummod.renforced_adventurer_boots": "Bottes d'Aventurier Renforcé",
   
   
   "item.destriummod.amazonite_apple": "Pomme En Amazonite",
