--- a/src/main/resources/assets/destriummod/lang/en_us.json
+++ b/src/main/resources/assets/destriummod/lang/en_us.json
@@ -59,6 +59,7 @@
   "item.destriummod.feather_boots": "Feather Boots",
   "item.destriummod.jump_boots": "Jump Boots",
   "item.destriummod.adventurer_boots": "Adventurer Boots",
+  "item.destriummod.renforced_adventurer_boots": "Renforced Adventurer Boots",
   
   
   "item.destriummod.amazonite_apple": "Amazonite Apple",
