--- a/src/main/resources/assets/destriummod/lang/en_us.json
+++ b/src/main/resources/assets/destriummod/lang/en_us.json
@@ -61,6 +61,8 @@
   "item.destriummod.adventurer_boots": "Adventurer Boots",
   "item.destriummod.renforced_adventurer_boots": "Renforced Adventurer Boots",
   
+  "item.destriummod.necklace": "Necklace",
+  
   
   "item.destriummod.amazonite_apple": "Amazonite Apple",
   "item.destriummod.destrium_apple": "Destrium Apple",
