--- a/src/main/resources/assets/destriummod/lang/fr_fr.json
+++ b/src/main/resources/assets/destriummod/lang/fr_fr.json
@@ -61,6 +61,8 @@
   "item.destriummod.adventurer_boots": "Bottes d'Aventurier",
   "item.destriummod.renforced_adventurer_boots": "Bottes d'Aventurier Renforcé",
   
+  "item.destriummod.necklace": "Collier",
+  
   
   "item.destriummod.amazonite_apple": "Pomme En Amazonite",
   "item.destriummod.destrium_apple": "Pomme En Destrium",
