--- a/src/main/resources/assets/destriummod/lang/en_us.json
+++ b/src/main/resources/assets/destriummod/lang/en_us.json
@@ -62,6 +62,7 @@
   "item.destriummod.renforced_adventurer_boots": "Renforced Adventurer Boots",
   
   "item.destriummod.necklace": "Necklace",
+  "item.destriummod.lucky_necklace": "Lucky Necklace",
   
   
   "item.destriummod.amazonite_apple": "Amazonite Apple",
