--- a/src/main/resources/assets/destriummod/lang/fr_fr.json
+++ b/src/main/resources/assets/destriummod/lang/fr_fr.json
@@ -62,6 +62,7 @@
   "item.destriummod.renforced_adventurer_boots": "Bottes d'Aventurier Renforcé",
   
   "item.destriummod.necklace": "Collier",
+  "item.destriummod.lucky_necklace": "Collier de Chance",
   
   
   "item.destriummod.amazonite_apple": "Pomme En Amazonite",
