--- a/src/main/resources/assets/destriummod/lang/en_us.json
+++ b/src/main/resources/assets/destriummod/lang/en_us.json
@@ -108,6 +108,7 @@
   "block.destriummod.destrium_ore": "Destrium Ore",
   "block.destriummod.argonide_ore": "Argonide Ore",
   "block.destriummod.cracked_argonide_ore": "Cracked Argonide Ore",
+  "block.destriummod.repair_ore": "Repair Ore",
   
   
   "block.destriummod.cobblestone_compressed1": "Compressed Cobblestone",
