--- a/src/main/resources/assets/destriummod/lang/en_us.json
+++ b/src/main/resources/assets/destriummod/lang/en_us.json
@@ -8,6 +8,7 @@
   "item.destriummod.destrium_nuggets": "Destrium Nuggets",
   "item.destriummod.argonide_ingot": "Argonide Ingot",
   "item.destriummod.argonide_nuggets": "Argonide Nuggets",
+  "item.destriummod.repair_fragment": "Repair Fragment",
   
   "item.destriummod.emerald_nuggets": "Emerald Nuggets",
   "item.destriummod.diamond_nuggets": "Diamond Nuggets",
