Repair Ingot Added

--- a/src/main/resources/assets/destriummod/lang/fr_fr.json
+++ b/src/main/resources/assets/destriummod/lang/fr_fr.json
@@ -9,6 +9,7 @@
   "item.destriummod.argonide_ingot": "Lingot d'Argonide",
   "item.destriummod.argonide_nuggets": "PÃ©pite d'Argonide",
   "item.destriummod.repair_fragment": "Fragment de Réparation",
+  "item.destriummod.repair_ingot": "Lingot de Réparation",
   
   "item.destriummod.emerald_nuggets": "PÃ©pite d'Emeraude",
   "item.destriummod.diamond_nuggets": "PÃ©pite de Diamants",
