Jump, Feather, Speed and Adventurer (+ Renforced) Boots Added

--- a/src/main/resources/assets/destriummod/lang/en_us.json
+++ b/src/main/resources/assets/destriummod/lang/en_us.json
@@ -54,6 +54,12 @@
   "item.destriummod.argonide_chestplate": "Argonide Chestplate",
   "item.destriummod.argonide_leggings": "Argonide Leggings",
   "item.destriummod.argonide_boots": "Argonide Boots",
+
+  "item.destriummod.speed_boots": "Speed Boots",
+  "item.destriummod.feather_boots": "Feather Boots",
+  "item.destriummod.jump_boots": "Jump Boots",
+  "item.destriummod.adventurer_boots": "Adventurer Boots",
+  "item.destriummod.renforced_adventurer_boots": "Renforced Adventurer Boots",
   
   
   "item.destriummod.amazonite_apple": "Amazonite Apple",
