Lucky/Necklace Added

--- a/src/main/resources/assets/destriummod/lang/en_us.json
+++ b/src/main/resources/assets/destriummod/lang/en_us.json
@@ -60,6 +60,9 @@
   "item.destriummod.jump_boots": "Jump Boots",
   "item.destriummod.adventurer_boots": "Adventurer Boots",
   "item.destriummod.renforced_adventurer_boots": "Renforced Adventurer Boots",
+
+  "item.destriummod.necklace": "Necklace",
+  "item.destriummod.lucky_necklace": "Lucky Necklace",
   
   
   "item.destriummod.amazonite_apple": "Amazonite Apple",
