Clover Name Bugs Patch

--- a/src/main/resources/assets/destriummod/lang/en_us.json
+++ b/src/main/resources/assets/destriummod/lang/en_us.json
@@ -169,6 +169,10 @@
   
   
   "block.destriummod.below_block": "Below Block",
+
+
+  "block.destriummod.clover": "3 Leaf Clover",
+  "block.destriummod.clover_two": "4 Leaf Clover",
   
   
   
