--- a/src/main/resources/assets/destriummod/lang/en_us.json
+++ b/src/main/resources/assets/destriummod/lang/en_us.json
@@ -8,7 +8,9 @@
   "item.destriummod.destrium_nuggets": "Destrium Nuggets",
   "item.destriummod.argonide_ingot": "Argonide Ingot",
   "item.destriummod.argonide_nuggets": "Argonide Nuggets",
-  
+  "item.destriummod.repair_fragment": "Repair Fragment",
+  "item.destriummod.repair_ingot": "Repair Ingot",
+
   "item.destriummod.emerald_nuggets": "Emerald Nuggets",
   "item.destriummod.diamond_nuggets": "Diamond Nuggets",
   "item.destriummod.netherite_nuggets": "Netherite Nuggets",
