Clover Name Bugs Patch

--- a/src/main/resources/assets/destriummod/lang/en_us.json
+++ b/src/main/resources/assets/destriummod/lang/en_us.json
@@ -168,8 +168,12 @@
   
   
   "block.destriummod.below_block": "Below Block",
-  
-  
+
+
+  "block.destriummod.clover": "3 Leaf Clover",
+  "block.destriummod.clover_two": "4 Leaf Clover",
+
+
   
   
   "fluid.destriummod.poison_water": "Empoisoned Water",
