French Red Cloud Name Bugs Patch

--- a/src/main/resources/assets/destriummod/lang/fr_fr.json
+++ b/src/main/resources/assets/destriummod/lang/fr_fr.json
@@ -152,7 +152,7 @@
   "block.destriummod.orange_cloud": "Nuage Orange",
   "block.destriummod.pink_cloud": "Nuage Rose",
   "block.destriummod.purple_cloud": "Nuage Violets",
-  "block.destriummod.red_cloud": "Nuage ClRougeoud",
+  "block.destriummod.red_cloud": "Nuage Rouge",
   "block.destriummod.ultra_dark_blue_cloud": "Nuage Ultra Bleu Foncé",
   "block.destriummod.yellow_cloud": "Nuage Jaune",
   "block.destriummod.cloud2": "Nuage",
