Modifing name of Clover to letter

--- a/src/main/resources/assets/destriummod/lang/en_us.json
+++ b/src/main/resources/assets/destriummod/lang/en_us.json
@@ -171,8 +171,8 @@
   "block.destriummod.below_block": "Below Block",
 
 
-  "block.destriummod.clover": "3 Leaf Clover",
-  "block.destriummod.clover_two": "4 Leaf Clover",
+  "block.destriummod.clover": "Three Leaf Clover",
+  "block.destriummod.clover_two": "Four Leaf Clover",
   
   
   
