Rename Renforced Adventure Boots to Reinforced Adventure Boots

--- a/src/main/resources/assets/destriummod/lang/en_us.json
+++ b/src/main/resources/assets/destriummod/lang/en_us.json
@@ -61,7 +61,7 @@
   "item.destriummod.feather_boots": "Feather Boots",
   "item.destriummod.jump_boots": "Jump Boots",
   "item.destriummod.adventurer_boots": "Adventurer Boots",
-  "item.destriummod.renforced_adventurer_boots": "Renforced Adventurer Boots",
+  "item.destriummod.reinforced_adventurer_boots": "Reinforced Adventurer Boots",
   
   "item.destriummod.necklace": "Necklace",
   "item.destriummod.lucky_necklace": "Lucky Necklace",
@@ -94,7 +94,7 @@
   "item.destriummod.poison_water_bucket": "Empoisoned Water Bucket",
   "item.destriummod.poison_star": "Poison Star",
   
-   "item.destriummod.resistance_lava_bucket": "Resistance Lava Bucket",
+  "item.destriummod.resistance_lava_bucket": "Resistance Lava Bucket",
   "item.destriummod.resistance_star": "Resistance Star",
  
   
