Add Description to Repair Fragment & Ingot

--- a/src/main/resources/assets/destriummod/lang/en_us.json
+++ b/src/main/resources/assets/destriummod/lang/en_us.json
@@ -219,6 +219,8 @@
   "item.destriummod.argonide_ingot.desc2": "Destrium",
   "item.destriummod.argonide_ingot.desc3": ">> Argonide",
   "item.destriummod.argonide_nuggets.desc": "Used to craft the Argonide Ingot",
+  "item.destriummod.repair_ingot.desc": "Used to Repair Items and other things",
+  "item.destriummod.repair_fragment.desc": "Used to craft the Repair Ingot",
   
   "item.destriummod.emerald_nuggets.desc": "Used to craft the Emerald",
   "item.destriummod.diamond_nuggets.desc": "Used to craft the Diamond",
