--- a/src/main/resources/assets/destriummod/lang/en_us.json
+++ b/src/main/resources/assets/destriummod/lang/en_us.json
@@ -9,7 +9,7 @@
   "item.destriummod.argonide_ingot": "Argonide Ingot",
   "item.destriummod.argonide_nuggets": "Argonide Nuggets",
   "item.destriummod.repair_fragment": "Repair Fragment",
-  "item.destriummod.repair_ingot": "Repair Ingot",
+  "item.destriummod.repair_gem": "Repair Ingot",
   
   "item.destriummod.emerald_nuggets": "Emerald Nuggets",
   "item.destriummod.diamond_nuggets": "Diamond Nuggets",
