--- a/src/main/resources/assets/destriummod/lang/en_us.json
+++ b/src/main/resources/assets/destriummod/lang/en_us.json
@@ -25,19 +25,19 @@
   "item.destriummod.amazonite_pickaxe": "Amazonite Pickaxe",
   "item.destriummod.amazonite_axe": "Amazonite Axe",
   "item.destriummod.amazonite_shovel": "Amazonite Shovel",
-  "item.destriummod.amazonite_hoes": "Amazonite Hoes",
+  "item.destriummod.amazonite_hoes": "Amazonite Hoe",
   
   "item.destriummod.destrium_sword": "Destrium Sword",
   "item.destriummod.destrium_pickaxe": "Destrium Pickaxe",
   "item.destriummod.destrium_axe": "Destrium Axe",
   "item.destriummod.destrium_shovel": "Destrium Shovel",
-  "item.destriummod.destrium_hoes": "Destrium Hoes",
+  "item.destriummod.destrium_hoes": "Destrium Hoe",
   
   "item.destriummod.argonide_sword": "Argonide Sword",
   "item.destriummod.argonide_pickaxe": "Argonide Pickaxe",
   "item.destriummod.argonide_axe": "Argonide Axe",
   "item.destriummod.argonide_shovel": "Argonide Shovel",
-  "item.destriummod.argonide_hoes": "Argonide Hoes",
+  "item.destriummod.argonide_hoes": "Argonide Hoe",
   
   "item.destriummod.spawners_pickaxe": "Spawners Pickaxe",
   
