--- a/src/main/resources/assets/destriummod/lang/en_us.json
+++ b/src/main/resources/assets/destriummod/lang/en_us.json
@@ -91,7 +91,7 @@
   
   "item.destriummod.infinity_water_bucket": "Infinity Water Bucket",
   
-  "item.destriummod.poison_water_bucket": "Empoisoned Water Bucket",
+  "item.destriummod.poison_water_bucket": "Poisoned Water Bucket",
   "item.destriummod.poison_star": "Poison Star",
   
   "item.destriummod.resistance_lava_bucket": "Resistance Lava Bucket",
