--- a/src/main/resources/assets/destriummod/lang/en_us.json
+++ b/src/main/resources/assets/destriummod/lang/en_us.json
@@ -177,7 +177,7 @@
   
   
   
-  "fluid.destriummod.poison_water": "Empoisoned Water",
+  "fluid.destriummod.poison_water": "Poisoned Water",
   
 
 
