--- a/src/main/resources/assets/destriummod/lang/fr_fr.json
+++ b/src/main/resources/assets/destriummod/lang/fr_fr.json
@@ -11,7 +11,7 @@
   "item.destriummod.repair_fragment": "Fragment de Réparation",
   "item.destriummod.repair_gem": "Gemme de Réparation",
   
-  "item.destriummod.emerald_nuggets": "Pépite d'Emeraude",
+  "item.destriummod.emerald_nuggets": "Pépite d'Émeraude",
   "item.destriummod.diamond_nuggets": "Pépite de Diamants",
   "item.destriummod.netherite_nuggets": "Pépite de Netherite",
   
