Add accent to french name

--- a/src/main/resources/assets/destriummod/lang/fr_fr.json
+++ b/src/main/resources/assets/destriummod/lang/fr_fr.json
@@ -92,10 +92,10 @@
   "item.destriummod.infinity_water_bucket": "Seaux d'Eau Infini",
   
   "item.destriummod.poison_water_bucket": "Seaux d'Eau Empoisonné",
-  "item.destriummod.poison_star": "Etoile de Poison",
+  "item.destriummod.poison_star": "Étoile de Poison",
   
   "item.destriummod.resistance_lava_bucket": "Seaux de Lave Résistante",
-  "item.destriummod.resistance_star": "Etoile de Résistance",
+  "item.destriummod.resistance_star": "Étoile de Résistance",
   
   
   
