Rename french ultra dark blue cloud

--- a/src/main/resources/assets/destriummod/lang/fr_fr.json
+++ b/src/main/resources/assets/destriummod/lang/fr_fr.json
@@ -154,7 +154,7 @@
   "block.destriummod.pink_cloud": "Nuage Rose",
   "block.destriummod.purple_cloud": "Nuage Violet",
   "block.destriummod.red_cloud": "Nuage Rouge",
-  "block.destriummod.ultra_dark_blue_cloud": "Nuage Ultra Bleu Foncé",
+  "block.destriummod.ultra_dark_blue_cloud": "Nuage Bleu Très Foncé",
   "block.destriummod.yellow_cloud": "Nuage Jaune",
   "block.destriummod.cloud2": "Nuage",
   "block.destriummod.cracked_cloud": "Nuage Craquelé",
