Add Repair Block

--- a/src/main/resources/assets/destriummod/lang/en_us.json
+++ b/src/main/resources/assets/destriummod/lang/en_us.json
@@ -104,6 +104,7 @@
   "block.destriummod.fake_amazonite_block": "Amazonite Block",
   "block.destriummod.destrium_block": "Destrium Block",
   "block.destriummod.argonide_block": "Argonide Block",
+  "block.destriummod.repair_block": "Repair Block",
   
   "block.destriummod.random_ore": "Random Ore",
   "block.destriummod.paradis_amazonite_ore": "Amazonite Ore",
