--- a/src/main/resources/assets/destriummod/lang/fr_fr.json
+++ b/src/main/resources/assets/destriummod/lang/fr_fr.json
@@ -104,6 +104,7 @@
   "block.destriummod.fake_amazonite_block": "Bloc d'Amazonite",
   "block.destriummod.destrium_block": "Bloc de Destrium",
   "block.destriummod.argonide_block": "Bloc d'Argonide",
+  "block.destriummod.repair_block": "Bloc de Réparation",
   
   "block.destriummod.random_ore": "Minerai Aléatoire",
   "block.destriummod.paradis_amazonite_ore": "Minerai d'Amazonite",
