Add First Blocks

--- a/src/main/resources/assets/destriummod/lang/en_us.json
+++ b/src/main/resources/assets/destriummod/lang/en_us.json
@@ -1,3 +1,5 @@
 {
-  "item.destriummod.destrium_ingot": "Destrium Ingot"
+  "item.destriummod.destrium_ingot": "Destrium Ingot",
+
+  "block.destriummod.destrium_block": "Destrium Block"
 }
