Clover name modified in letter

--- a/src/main/resources/assets/destriummod/lang/fr_fr.json
+++ b/src/main/resources/assets/destriummod/lang/fr_fr.json
@@ -170,8 +170,8 @@
   "block.destriummod.below_block": "Bloc De l'En Dessous",
 
 
-  "block.destriummod.clover": "Trèfle à 3 Feuille",
-  "block.destriummod.clover_two": "Trèfle à 4 Feuille",
+  "block.destriummod.clover": "Trèfle à trois Feuille",
+  "block.destriummod.clover_two": "Trèfle à quatre Feuille",
 
 
 
